# quant_AI_T

./: CODE_REVIEW_REPORT.md  LICENSE  LIVE_TRADING_CODE_REVIEW.md  RESTORE_GUIDE.md  ultimate_scan_log.txt
quant_project_AI/: .gitignore  CODE_REVIEW_REPORT.md  ENTRY_POINT_CODE_REVIEW.md  ENTRY_POINT_DEEP_REVIEW.md  INTEGRATION_DATA_FLOW_REVIEW.md  KERNELS_CODE_REVIEW.md  LICENSE  MANIFEST.md  README.md  ROUND3_CODE_REVIEW_REPORT.md  STRATEGY_CODE_REVIEW_REPORT.md  TEST_REVIEW_REPORT.md  ULTIMATE_BACKTEST_PLAN.md  _gen_frozen.py  _gen_refs.py  _pack.py  _test_rust_vs_numba.py  audit_returns.py  bench_backtest.py  bench_full.py  daily_research.py  download_data.py  pack_project.py  prepare_github.py  requirements.txt  run_full_scan.py  run_full_scan_v2.py  run_live_trading.py  run_production_scan.py  run_ultimate_scan.py
quant_project_AI/data/: README.md
quant_project_AI/docs/: ALL_STRATEGIES_NEXT_OPEN_REPORT.md  ARCHITECTURE.md  AUDIT.md  BACKTEST_VS_LIVE.md  BEGINNER_GUIDE.md  COMPARISON.md  COMPREHENSIVE_BACKTEST_ANALYSIS_V3.md  COMPREHENSIVE_ROBUST_REPORT.md  COMPREHENSIVE_UPGRADE_PLAN.md  CRYPTO_BENCHMARK_REPORT.md  DASHBOARD_UI_OPTIMIZATION.md  DESIGN.md  DROPDOWN_FIX_GUIDE.md  EXECUTION_DIAGNOSTICS.md  (+28 more)
quant_project_AI/rust/: Cargo.toml  pyproject.toml
quant_project_AI/rust/src/: fill_sim.rs  lib.rs  rolling.rs
quant_project_AI/rust/src/indicators/: technical.rs
quant_project_AI/rust/src/io_accel/: mod.rs
quant_project_AI/rust/src/kernels/: dispatch.rs  helpers.rs  indicators.rs  mod.rs  precompute.rs  scan.rs  strategies.rs
zip/: RESTORE_GUIDE.md
(+218 files in other folders)
