[package]
name = "quant_core"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated core for quant_AI_T trading framework"

[lib]
name = "quant_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
